--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
     <h1>Welcome to home page</h1>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit fuga magni repellendus aperiam tempora placeat totam eveniet amet, quibusdam, molestiae officia harum eos non! Facere facilis aperiam rerum fuga veniam?</p>
+
+    
     
 </body>
 </html>
